# Server

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt
client/src/: game.hpp  main.cpp
common/: game_common.hpp  network.h
server/: CMakeLists.txt
server/src/: game.hpp  main.cpp
